force-app/main/default/objects/Subscription_Transfer__c/Subscription_Transfer__c.object-meta.xml
<CustomObject>
    <description>This relates Utility Account Subscriptions that are being transferred and holds the value and date information for the amount that is being transferred.</description>
    <label>Subscription Transfer</label>
    <nameField>
        <displayFormat>ST-{000}</displayFormat>
        <label>Subscription Transfer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Transfers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>