force-app/main/default/objects/Subscription_Transfer__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>Effective Date of the subscription transfer.  This is the date that the new Allocation Schedule containing the new subscriptions is enacted.</description>
    <inlineHelpText>Effective Date of the subscription transfer.  This is the date that the new Allocation Schedule containing the new subscriptions is enacted.</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>