force-app/main/default/objects/Subscription_Transfer__c/fields/Sum_of_Old_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Old_Subscriptions__c</fullName>
    <description>Sum of subscriptions being replaced by this Subscription Transfer.</description>
    <inlineHelpText>Sum of subscriptions being replaced by this Subscription Transfer.  Populate based on % subscription x Project Size on Allocation Schedule Subscriptions.</inlineHelpText>
    <label>Sum of Old Subscriptions (kW DC)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>